--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://github.com/akshitadixit/VCallZer" class="image fit"><img src="images/vcallzer.gif" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://github.com/IIITKalyaniFOSC/MediCare-Prime" class="image fit"><img src="images/MEDICARE.gif" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://github.com/DSC-IIIT-Kalyani/ENCODN" class="image fit"><img src="images/ENCODN-logo.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://github.com/akshitadixit/Trackizer-WA" class="image fit"><img src="images/trackizer.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://github.com/akshitadixit/Structurex" class="image fit"><img src="images/structurex2.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="https://image.freepik.com/free-vector/coming-soon-background-with-spot-light-design_1017-25515.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
