--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
 					<div id="footer">
 						<ul class="copyright" style="font-size: x-large; font-weight: bolder;">
 							<li>&copy; E-mail: <a href="mailto:akshitadixit.int@gmail.com">akshitadixit.int@gmail.com</a></li>
+							<li><!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7828268&style=0025&nbdigits=7&type=page&initCount=10" title="Free Counter" Alt="web counter"   border="0" /></a>       </li>
 						</ul>
 					</div>
 
