update cv and resume

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 							</header>
 							<center>
 							<div>
-								<a href="assets/AkshitaDixit_Resume.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>C.V.</p></a>
-								<a href="assets/AkshitaDixit_Resume.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
+								<a href="assets/AkshitaDixit_CV.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>C.V.</p></a>
+								<a href="assets/AkshitaDixit_Resume_dev.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
 							  </div>
 							</center>
 						</article>
