--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<a href="https://github.com/akshitadixit" class="fa fa-github fa-4x icon-3d" style="text-decoration:none"></a>
 								<a href="https://twitter.com/plastic96_" class="fa fa-twitter fa-4x icon-3d" style="text-decoration:none"></a>
 								<a href="https://linkedin.com/in/akshitadixit" class="fa fa-linkedin fa-4x icon-3d" style="text-decoration:none"></a>
-								<a href="https://medium.com/plastic96" class="fa fa-medium fa-4x icon-3d" style="text-decoration:none"></a>
+								<a href="https://plastic96.medium.com" class="fa fa-medium fa-4x icon-3d" style="text-decoration:none"></a>
 
 								</div>
 							</article>
