--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 							</header>
 							<center>
 							<div>
-								<a href="assets/AkshitaDixit_CV.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>C.V.</p></a>
-								<a href="assets/AkshitaDixit_Resume_dev.pdf" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
+								<a href="https://docs.google.com/document/d/1mVMyRvs3v3rKVs_c4toTG32MiH00bkW0ZF1_cefuUBQ/edit?usp=sharing" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>C.V.</p></a>
+								<a href="https://drive.google.com/file/d/16_Wd29mrmPHZHrBtjRDkK1NO57XUx4dL/view?usp=sharing" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
 							  </div>
 							</center>
 						</article>
