--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								</header>
 								<p>
 									Tbh it is super weird to talk about yourself, but below is a fancy paragraph I copy paste everywhere.<br/><br/>
-									I'm a 2nd year undergrad at IIIT Kalyani currently interning as a Backend Dev(Java). I am an Open Source enthusiast. Proficient in multi-cloud platforms, Java, Python, and JavaScript, I'm always partial towards a web-app than a mobile-app. Accepted into the Udacity-Suse native Cloud Scholarship program, I'm also involved with Deep learning and image processing. Will be happy to collaborate/work on anything related to Open Source, DevOps, and Computer Vision.
+									I'm a 3rd year undergrad at IIIT Kalyani currently interning as a Backend Dev(Java). I am an Open Source enthusiast. Proficient in multi-cloud platforms, Java, Python, and JavaScript, I'm always partial towards a web-app than a mobile-app. Accepted into the Udacity-Suse native Cloud Scholarship program, I'm also involved with Deep learning and image processing. Will be happy to collaborate/work on anything related to Open Source, DevOps, and Computer Vision.
 									<br/><br/>
 									Will be more than happy to connect and network :)
 								</p>
