--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 								<a href="https://docs.google.com/document/d/1mVMyRvs3v3rKVs_c4toTG32MiH00bkW0ZF1_cefuUBQ/edit?usp=sharing" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>C.V.</p></a>
 								<a href="https://drive.google.com/file/d/16_Wd29mrmPHZHrBtjRDkK1NO57XUx4dL/view?usp=sharing" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
 							  </div>
+								<!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/plastic96/meeting?hide_landing_page_details=1&hide_gdpr_banner=1', text: 'Schedule a meet', color: '#ffffff', textColor: '#000', branding: false }); }</script>
+<!-- Calendly badge widget end -->
 							</center>
 						</article>
 
