Change resume section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Akshita Dixit</h1>
-									<p>I prefer to go by my nick. Call me plastic</p>
+									<p>Call me plastic</p> <br><br>
+									<a href="https://drive.google.com/file/d/1mpcglMkOVo72K5OQ2Xl6We71rfW_TMS3/view?usp=sharing"><button class="btn">View Resume</button></a>
 								</header>
 									<img src="images/pp.jpg" height="450px" width="450px" alt="" />
 							</article>
@@ -42,7 +43,7 @@
 								</header>
 								<p>
 									Tbh it is super weird to talk about yourself, but below is a fancy paragraph I copy paste everywhere.<br/><br/>
-									I'm a 3rd year undergrad at IIIT Kalyani currently interning as a Backend Dev(Java). I am an Open Source enthusiast. Proficient in multi-cloud platforms, Java, Python, and JavaScript, I'm always partial towards a web-app than a mobile-app. Accepted into the Udacity-Suse native Cloud Scholarship program, I'm also involved with Deep learning and image processing. Will be happy to collaborate/work on anything related to Open Source, DevOps, and Computer Vision.
+									I'm a 3rd year undergrad at IIIT Kalyani currently interning as a Backend Dev(Java). I am an Open Source enthusiast. Proficient in multi-cloud platforms, Java, Python, and JavaScript, I'm always partial towards a web-app than a mobile-app. Accepted into the Udacity-Suse native Cloud Scholarship program, I'm also involved with Deep learning and Image Processing. Will be happy to collaborate/work on anything related to Open Source, DevOps, and Computer Vision.
 									<br/><br/>
 									Will be more than happy to connect and network :)
 								</p>
@@ -97,9 +98,7 @@
 								<h2>Download</h2>
 							</header>
 							<center>
-							<div>
-								<a href="https://drive.google.com/file/d/1mpcglMkOVo72K5OQ2Xl6We71rfW_TMS3/view?usp=sharing" class="fa fa-file-pdf fa-1x icon-3d" style="text-decoration:none"><p>Resume</p></a>
-							  </div>
+							
 								<!-- Calendly badge widget begin -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
