--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 											<ul>
 												
 												<li><a href="https://medium.com/p/8e47327bd3f5">Data Lifecycle Management</a></li>
+												<li><a href="https://docs.google.com/document/d/11A0TJXBzPnIMpz2KreiVO7NrDj2GkoyeBOX-OyWqS-8/edit?usp=sharing">What is Package Tampering and How to Prevent It?</a></li>
 												<li><a href="https://plastic96.medium.com/tricks-and-tips-to-make-debugging-easier-7cc0e36abde9">Tricks and Tips to Make Debugging Easier</a></li>
 												<li><a href="https://plastic96.hashnode.dev/reverse-engineering-common-python-vulnerabilities-to-solve-them">Python Vulnerabilities Reverse Engineered</a></li>
 												<li><a href="https://docs.google.com/document/d/1z5MsJ_8nan1Y3kJlZkbx_6gJP1UPbeAJYWwkUjdvN-g/edit?usp=sharing">Data Warehouse as a Service</a></li>
