--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 												<li><a href="https://docs.google.com/document/d/11A0TJXBzPnIMpz2KreiVO7NrDj2GkoyeBOX-OyWqS-8/edit?usp=sharing">What is Package Tampering and How to Prevent It?</a></li>
 												<li><a href="https://plastic96.medium.com/tricks-and-tips-to-make-debugging-easier-7cc0e36abde9">Tricks and Tips to Make Debugging Easier</a></li>
 												<li><a href="https://plastic96.hashnode.dev/reverse-engineering-common-python-vulnerabilities-to-solve-them">Python Vulnerabilities Reverse Engineered</a></li>
+												<li><a href="https://plastic96.hashnode.dev/traceability-the-core-of-data-transformation">Traceability - The core of data transformations</a></li>
 												<li><a href="https://docs.google.com/document/d/1z5MsJ_8nan1Y3kJlZkbx_6gJP1UPbeAJYWwkUjdvN-g/edit?usp=sharing">Data Warehouse as a Service</a></li>
 												<li><a href="https://gist.github.com/akshitadixit/a5d92394ef53da0ca2a1de78fd138b20">Maven Tutorial For Beginners</a></li>
 												<li><a href="https://gist.github.com/akshitadixit/a57b63f648fde3b2daf2e81c16b55b9b">Creating a Custom Python Executable</a></li>
