--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 										<ul>
 											<div class="row">
 												<div>
+													<img src="./images/iwd.jpeg" alt="Meritocracy" style="width:90%; height: 90%;">
+												</div>
+											</div>
+											<div class="row">
+												<div>
 													<img src="https://pbs.twimg.com/media/FpQPTbtakAA8MFv?format=jpg&name=medium" alt="Network Graph Databases" style="width:90%; height: 90%;">
 												</div>
 											</div>
