--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 									<div class="row">
 										<div style="margin-left: 5%;">
 											<ul>
+												<li><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8">Flutter x Amplication</a></li>
 												<li><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho">Creating Data Models for NodeJS Apps with Amplication’s React Admin UI</a></li>
 												<li><a href="https://learnxinyminutes.com/docs/docker/">Learn 'x'=Docker in 'y' minutes</a></li>
 												<li><a href="https://medium.com/p/8e47327bd3f5">Data Lifecycle Management</a></li>
