--- a/index.html
+++ b/index.html
@@ -51,23 +51,59 @@
 								<header>
 									<h2>About</h2>
 								</header>
+								<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
 								<p>
-									Tbh it is super weird to talk about yourself, but below is a paragraph I copy paste with tweaks everywhere.<br/><br/>
+									Tbh it is super weird to talk about yourself, but below is a mere try.<br/>
 									I'm a final year CS undergraduate (2019-2023) at IIIT Kalyani.
 
-									I'm working with Major League Hacking as a Technical Program Associate  where I manage pods or groups of MLH fellows for them with code-reviews,
-									communicate with engineers at partner companies and help with collaborative learning. I am an Ex-MLH Fellow myself. I have also been involved with
-									the Google Developer Student Clubs at my campus for over 2 years, promoting Google technologies and organising workshops and technical sessions.
-									You might wanna check them out <a href="https://gdsc.community.dev/indian-institute-of-information-technology-kalyani/">here</a>.
-									An open source enthusiast, involved with Deep learning, Image Processing and backend technologies in primarily Python, I also do freelance technical writing.
-									<br/>
+									Here are a few things I am/have been involved with:
 
-									As an aspiring DevRel (Developer Relations) professional, I am excited to bring my passion for technology and my communication skills to the role of building
+									<style>
+										ul {
+											list-style: none;
+											padding: 0;
+										}
+
+										li {
+											margin-bottom: 10px;
+											position: relative;
+										}
+
+										li b {
+											display: inline-block;
+											width: calc(100% - 80px);
+											font-weight: normal;
+										}
+
+										li b a {
+											color: #3fb8e3;
+											text-decoration: none;
+										}
+
+										li span {
+											position: absolute;
+											top: 0;
+											right: 0;
+										}
+										</style>
+
+										<ul>
+											<li><b>Backend Engineering Intern <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-present]</span></li>
+											<li><b>Hackathon Coach <a href="https://mlh.io/">@MLH</a></b> <span>[2023-present]</span></li>
+											<li><b>Technical Program Associate <a href="https://mlh.io/">@MLH Fellowship</a></b> <span>[2022-present]</span></li>
+											<li><b>Fellow <a href="https://fellowship.mlh.io/">@MLH Fellowship</a></b> <span>[2021]</span></li>
+											<li><b>Lead <a href="https://gdsc.community.dev/indian-institute-of-information-technology-kalyani/">@GDSC</a></b> <span>[2021-22]</span></li>
+											<li><b>Backend Engineering Intern <a href="https://www.crediwatch.com/home/">@Crediwatch</a></b> <span>[2021]</span></li>
+										</ul>
+
+									I also do freelance technical writing and content creation for tech companies and startups. You can check out my work in the articles tab.
+									As my interest in developer advocacy, I am excited to bring my passion for technology and my communication skills to the role of building
 									relationships between developers and a company. Open to considering opportunities in this space.
 
 									<br/><br/>
 									Will be happy to collaborate/work on anything not limited, but related to any of the above. Will be more than happy to connect and network :)
 								</p>
+							</div>
 							</article>
 
 							<!-- Work -->
@@ -75,57 +111,66 @@
 								<header>
 									<h2>Projects</h2>
 								</header>
-								<section>
+								<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
+								<section style="padding-left: 1.5%;">
 									<div class="row">
-										<div style="margin-left: 5%;">
-											<p> Most recent first, these aren't on my resume: </p>
-											<ul>
-												<li><a href="https://github.com/akshitadixit/Scheduler">Project Scheduler in Python</a>
+											<p>Most recent first, these aren't on my resume:</p>
+											<ul style="list-style-type: none; padding-left: 2%;">
+											  <li style="margin-bottom: 20px;">
+													<a href="https://github.com/akshitadixit/flockbot" style="color: #d772e4; font-weight: bold;">Flockbot for Oncalls</a>
 													<br>
-													<p>Made for a semester project submission for the subject "Software Engineering". Takes in your input files with tasks' details and
-													outputs a file with task specs like duration, float etc. Contains basic unit tests as well.</p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/flutter-travel">Virtual Pilgrim Experience</a>
-													<br>
-													<p>Made for Smart India Hackathon submission, this is a Flutter app, using Firebase for BaaS, that gives users virtual experience
-													of pilgrimage sites. Includes immersive 360 degree views of the sites, allows donations to the pligrimages. (repo is pvt for now, added link in case would want to make it pulic someday)</p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/dcel">DCEL</a>
-													<br>
-													<p>College assignment. Doubly Connected Edge List to read .ply files in Python </p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/Handwritten-Code-Scanner">Handwritten Code Scanner</a>
-													<br>
-													<p>Made for a Hackathon. Write code on paper (in any language), scan it using the Flutter app, provide inputs and get the output of your handwritten code. </p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/LR-1-parser">LR-1 Parser in Python</a>
-													<br>
-													<p>Made for a semester project submission for the subject "Compiler Design".
-														Takes a grammar's production rules and creates a LR(1) parsing table, then finally parses the grammar to "accept" or "reject".</p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/octo-fortnight">Samvaad Bot</a>
-													<br>
-													<p>Made for a hackathon. A Google meet bot that joins the meeting by invitation. Bot acts a realtime Bilingual Translator to convey messages to each side almost instantly.</p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/EnPride">Inclusivity App</a>
-													<br>
-													<p>Made for a Hackathon. A chrome extension for women + non-binary => that suggests you a stronger, and much more confident lingo that makes
-														you aware of how subconsciously you're trying to undermine yourself through your words, for men => that suggests you a softer,
-														much more inclusive lingo, so you do not offend any community member.
-												</li>
-												<li><a href="https://github.com/akshitadixit/Retinopathy">Retinopathy</a>
-													<br>
-													<p>Not a project exactly but made while I was learning Deep Learning. This is a Categorical Detection and Prediction Task based on subset of a Kaggle dataset from Eye Images
-														APTOS 2019 Challenge. Predicts the Blindness Stage (0-4) class from the Eye retina Image using transfer learning via resnet50.</p>
-												</li>
-												<li><a href="https://github.com/akshitadixit/Magic-8-Ball">Magic 8-ball</a>
-													<br>
-													<p>Was learning python then. A script with GUI console to play the famous fortune-teller game written in Python3 with PyQt5  </p>
-												</li>
+													<p style="margin-top: 5px;">Made for Techathon at 1mg. The bot listens to commands and pulls up data and contact of the on-call developers for that sprint to display on the flock channel.</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/Scheduler" style="color: #d772e4; font-weight: bold;">Project Scheduler in Python</a>
+												<br>
+												<p style="margin-top: 5px;">Made for a semester project submission for the subject "Software Engineering". Takes in your input files with tasks' details and
+												  outputs a file with task specs like duration, float etc. Contains basic unit tests as well.</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/flutter-travel" style="color: #d772e4; font-weight: bold;">Virtual Pilgrim Experience</a>
+												<br>
+												<p style="margin-top: 5px;">Made for Smart India Hackathon submission, this is a Flutter app, using Firebase for BaaS, that gives users virtual experience
+												  of pilgrimage sites. Includes immersive 360 degree views of the sites, allows donations to the pligrimages. (repo is pvt for now, added link in case would want to make it pulic someday)</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/dcel" style="color: #d772e4; font-weight: bold;">DCEL</a>
+												<br>
+												<p style="margin-top: 5px;">College assignment. Doubly Connected Edge List to read .ply files in Python </p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/Handwritten-Code-Scanner" style="color: #d772e4; font-weight: bold;">Handwritten Code Scanner</a>
+												<br>
+												<p style="margin-top: 5px;">Made for a Hackathon. Write code on paper (in any language), scan it using the Flutter app, provide inputs and get the output of your handwritten code. </p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/LR-1-parser" style="color: #d772e4; font-weight: bold;">LR-1 Parser in Python</a>
+												<br>
+												<p style="margin-top: 5px;">Made for a semester project submission for the subject "Compiler Design".
+												  Takes a grammar's production rules and creates a LR(1) parsing table, then finally parses the grammar to "accept" or "reject".</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/octo-fortnight" style="color: #d772e4; font-weight: bold;">Samvaad Bot</a>
+												<br>
+												<p style="margin-top: 5px;">Made for a hackathon. A Google meet bot that joins the meeting by invitation. Bot acts a realtime Bilingual Translator to convey messages to each side almost instantly.</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/EnPride" style="color: #d772e4; font-weight: bold;">Inclusivity App</a>
+												<br>
+												<p style="margin-top: 5px;">Made for a Hackathon. A chrome extension for women + non-binary => that suggests you a stronger, and much more confident lingo that makes
+													you aware of how subconsciously you're trying to undermine yourself through your words, for men => that suggests you a softer,
+													much more inclusive lingo, so you do not offend any community member.</p>
+											  </li>
+											  <li style="margin-bottom: 20px;">
+												<a href="https://github.com/akshitadixit/Retinopathy" style="color: #d772e4; font-weight: bold;">Retinopathy</a>
+												<br>
+												<p style="margin-top: 5px;">Not a project exactly but made while I was learning Deep Learning. This is a Categorical Detection and Prediction Task based on subset of a Kaggle dataset from Eye Images
+													APTOS 2019 Challenge. Predicts the Blindness Stage (0-4) class from the Eye retina Image using transfer learning via resnet50.</p>
+											  </li>
 											</ul>
-										</div>
 									</div>
 								</section>
+							</div>
 							</article>
 
 						<!-- Sessions -->
@@ -133,6 +178,7 @@
 							<header>
 								<h2>Sessions</h2>
 							</header>
+							<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
 							<section>
 								<div class="row">
 									<div style="margin-left: 5%;">
@@ -169,6 +215,7 @@
 									</div>
 								</div>
 							</section>
+							</div>
 						</article>
 
 						<!-- Articles -->
@@ -176,27 +223,25 @@
 								<header>
 									<h2>Articles</h2>
 								</header>
+								<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
 								<section>
 									<div class="row">
-										<div style="margin-left: 5%;">
-											<ul>
-												<li><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8">Flutter x Amplication</a></li>
-												<li><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho">Creating Data Models for NodeJS Apps with Amplication’s React Admin UI</a></li>
-												<li><a href="https://learnxinyminutes.com/docs/docker/">Learn 'x'=Docker in 'y' minutes</a></li>
-												<li><a href="https://medium.com/p/8e47327bd3f5">Data Lifecycle Management</a></li>
-												<li><a href="https://docs.google.com/document/d/11A0TJXBzPnIMpz2KreiVO7NrDj2GkoyeBOX-OyWqS-8/edit?usp=sharing">What is Package Tampering and How to Prevent It?</a></li>
-												<li><a href="https://plastic96.medium.com/tricks-and-tips-to-make-debugging-easier-7cc0e36abde9">Tricks and Tips to Make Debugging Easier</a></li>
-												<li><a href="https://plastic96.hashnode.dev/reverse-engineering-common-python-vulnerabilities-to-solve-them">Python Vulnerabilities Reverse Engineered</a></li>
-												<li><a href="https://plastic96.hashnode.dev/traceability-the-core-of-data-transformation">Traceability - The core of data transformations</a></li>
-												<li><a href="https://docs.google.com/document/d/1z5MsJ_8nan1Y3kJlZkbx_6gJP1UPbeAJYWwkUjdvN-g/edit?usp=sharing">Data Warehouse as a Service</a></li>
-												<li><a href="https://gist.github.com/akshitadixit/a5d92394ef53da0ca2a1de78fd138b20">Maven Tutorial For Beginners</a></li>
-												<li><a href="https://gist.github.com/akshitadixit/a57b63f648fde3b2daf2e81c16b55b9b">Creating a Custom Python Executable</a></li>
-												<li><a href="https://medium.com/@plastic96/all-things-mlh-fellowship-e4b5af48c23d">All things MLH Fellowship</a></li>
-
+											<ul style="list-style: none; margin-left: 5%; padding-left: 0;">
+												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Flutter x Amplication: Building a To-Do App</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating Data Models for NodeJS Apps with Amplication's React Admin UI</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://learnxinyminutes.com/docs/docker/" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Learn Docker in Minutes</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://medium.com/p/8e47327bd3f5" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Data Lifecycle Management: Everything You Need to Know</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://docs.google.com/document/d/11A0TJXBzPnIMpz2KreiVO7NrDj2GkoyeBOX-OyWqS-8/edit?usp=sharing" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">What is Package Tampering and How to Prevent It?</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/tricks-and-tips-to-make-debugging-easier-7cc0e36abde9" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Tricks and Tips to Make Debugging Easier</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://plastic96.hashnode.dev/reverse-engineering-common-python-vulnerabilities-to-solve-them" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Python Vulnerabilities Reverse Engineered: A Guide for Developers</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://plastic96.hashnode.dev/traceability-the-core-of-data-transformation" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Traceability: The Core of Data Transformations</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://docs.google.com/document/d/1z5MsJ_8nan1Y3kJlZkbx_6gJP1UPbeAJYWwkUjdvN-g/edit?usp=sharing" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Data Warehouse as a Service</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://gist.github.com/akshitadixit/a5d92394ef53da0ca2a1de78fd138b20" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Maven Tutorial For Beginners</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://gist.github.com/akshitadixit/a57b63f648fde3b2daf2e81c16b55b9b" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating a Custom Python Executable</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://medium.com/@plastic96/all-things-mlh-fellowship-e4b5af48c23d" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">All things MLH Fellowship</a></li>
 											</ul>
-										</div>
-									</div>
 								</section>
+								</div>
 							</article>
 
 						<!-- Contact -->
@@ -204,12 +249,13 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
+								<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
 								<div style="padding: 5%;">
-								<a href="https://github.com/akshitadixit" class="fa fa-github fa-4x icon-3d" style="text-decoration:none"></a>
-								<a href="https://twitter.com/plastic96_" class="fa fa-twitter fa-4x icon-3d" style="text-decoration:none"></a>
-								<a href="https://linkedin.com/in/akshitadixit" class="fa fa-linkedin fa-4x icon-3d" style="text-decoration:none"></a>
-								<a href="https://plastic96.medium.com" class="fa fa-medium fa-4x icon-3d" style="text-decoration:none"></a>
-
+								<a href="https://github.com/akshitadixit" class="fa fa-github fa-4x icon-3d" style="text-decoration:none; color: #333;"></a>
+								<a href="https://twitter.com/plastic96_" class="fa fa-twitter fa-4x icon-3d" style="color: #1DA1F2;text-decoration:none"></a>
+								<a href="https://linkedin.com/in/akshitadixit" class="fa fa-linkedin fa-4x icon-3d" style="color: #0077B5; text-decoration:none"></a>
+								<a href="https://plastic96.medium.com" class="fa fa-medium fa-4x icon-3d" style="color: #12100E; text-decoration:none"></a>
+								</div>
 								</div>
 							</article>
 
