--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/contact.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -16,7 +17,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#home" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-info-circle"><span>About</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#sessions" class="icon solid fa-microphone"><span>Sessions</span></a>
@@ -32,6 +33,29 @@
 								<header>
 									<h1>Akshita Dixit</h1>
 									<p>Call me plastic</p> <br><br>
+									<style>
+										.btn {
+											-webkit-border-radius: 8;
+											-moz-border-radius: 8;
+											border-radius: 8px;
+											font-family: Georgia;
+											color: #ffffff;
+											font-size: 25px;
+											background: #a67dfa;
+											padding: 10px 20px 10px 20px;
+											text-decoration: none;
+										}
+
+										.btn:hover {
+											background: #af8cfa;
+											background-image: -webkit-linear-gradient(top, #af8cfa, #8f5ff5);
+											background-image: -moz-linear-gradient(top, #af8cfa, #8f5ff5);
+											background-image: -ms-linear-gradient(top, #af8cfa, #8f5ff5);
+											background-image: -o-linear-gradient(top, #af8cfa, #8f5ff5);
+											background-image: linear-gradient(to bottom, #af8cfa, #8f5ff5);
+											text-decoration: none;
+										}
+									</style>
 									<a href="https://drive.google.com/file/u/5/d/1-97FyaQiIeJyXa5wHJX1pPzXqgyNBgmb/view?usp=sharing"><button class="btn">View Resume</button></a>
 									<br>
 
@@ -179,46 +203,118 @@
 								<h2>Sessions</h2>
 							</header>
 							<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
-							<section>
-								<div class="row">
-									<div style="margin-left: 5%;">
-										<p> Someday I will fix the css ;) </p>
-										<ul>
-											<div class="row">
-												<div>
-													<img src="./images/iwd.jpeg" alt="Meritocracy" style="width:90%; height: 90%;">
-												</div>
+								<section>
+									<div class="container">
+									  <div class="row">
+										<div class="col-md-3 collage-item">
+										  <div class="popup" id="popup1">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup1')">&times;</span>
+											  <img src="./images/pydelhiconf.jpeg" alt="Async Test Cases" class="popup-img">
 											</div>
-											<div class="row">
-												<div>
-													<img src="https://pbs.twimg.com/media/FpQPTbtakAA8MFv?format=jpg&name=medium" alt="Network Graph Databases" style="width:90%; height: 90%;">
-												</div>
+										  </div>
+										  <img src="./images/pydelhiconf.jpeg" alt="Async Test Cases" onclick="openPopup('popup1')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-6 collage-item">
+										  <div class="popup" id="popup2">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup2')">&times;</span>
+											  <img src="./images/gdsc.jpeg" alt="MLH" class="popup-img">
 											</div>
-											<div class="row">
-													<div>
-														<img src="https://pbs.twimg.com/media/FmE5R3SaEAE6y_c?format=png&name=small" alt="Network Graph Databases" style="width: 97%; height: 96%;">
-													</div>
+										  </div>
+										  <img src="./images/gdsc.jpeg" alt="MLH" onclick="openPopup('popup2')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-3 collage-item">
+										  <div class="popup" id="popup3">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup3')">&times;</span>
+											  <img src="./images/fossdelhi.jpeg" alt="Empowering open source contribs" class="popup-img">
 											</div>
-											<br><br>
-											<div class="row">
-												<div>
-													<img src="https://pbs.twimg.com/media/FjNUAiOakAIRNLi?format=jpg&name=medium" alt="Monitoring Webapps" style="width: 90%; height: 90%;">
-												</div>
+										  </div>
+										  <img src="./images/fossdelhi.jpeg" alt="Empowering open source contribs" onclick="openPopup('popup3')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-4 collage-item">
+										  <div class="popup" id="popup4">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup4')">&times;</span>
+											  <img src="./images/pydelhi.jpeg" alt="Sanic's Event Loop" class="popup-img">
 											</div>
-											<div class="row">
-													<div>
-														<img src="https://pbs.twimg.com/media/FRm4j8DakAAq3qU?format=jpg&name=medium" alt="Image Processing" style="width: 90%; height: 97%;">
-													</div>
+										  </div>
+										  <img src="./images/pydelhi.jpeg" alt="Sanic's Event Loop" onclick="openPopup('popup4')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-4 collage-item">
+										  <div class="popup" id="popup5">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup5')">&times;</span>
+											  <img src="./images/gdgknp.jpeg" alt="Empowering open source contribs" class="popup-img">
 											</div>
-
-										</ul>
+										  </div>
+										  <img src="./images/gdgknp.jpeg" alt="Empowering open source contribs" onclick="openPopup('popup5')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-4 collage-item">
+										  <div class="popup" id="popup6">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup6')">&times;</span>
+											  <img src="./images/iwd.jpeg" alt="Meritocracy" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/iwd.jpeg" alt="Meritocracy" onclick="openPopup('popup6')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-6 collage-item">
+										  <div class="popup" id="popup7">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup7')">&times;</span>
+											  <img src="./images/fossccu.jpeg" alt="Network Graph Databases" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/fossccu.jpeg" alt="Network Graph Databases" onclick="openPopup('popup7')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-6 collage-item">
+										  <div class="popup" id="popup8">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup8')">&times;</span>
+											  <img src="./images/neo4jdelhi.png" alt="Network Graph Databases" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/neo4jdelhi.png" alt="Network Graph Databases" onclick="openPopup('popup8')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-3 collage-item">
+										  <div class="popup" id="popup9">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup9')">&times;</span>
+											  <img src="./images/devfestnoida.jpeg" alt="Monitoring Webapps" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/devfestnoida.jpeg" alt="Monitoring Webapps" onclick="openPopup('popup9')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-9 collage-item">
+										  <div class="popup" id="popup10">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup10')">&times;</span>
+											  <img src="./images/gdsc1.jpeg" alt="Image Processing" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/gdsc1.jpeg" alt="Image Processing" onclick="openPopup('popup10')" style="cursor: pointer;">
+										</div>
+									  </div>
 									</div>
-								</div>
-							</section>
+								  </section>
+
+								  <script>
+									function openPopup(popupId) {
+									  document.getElementById(popupId).style.display = 'flex';
+									}
+
+									function closePopup(popupId) {
+									  document.getElementById(popupId).style.display = 'none';
+									}
+								  </script>
+
+
 							</div>
 						</article>
 
-						<!-- Articles -->
+						<!-- Articles (might use &#x1F4DD;)-->
 							<article id="articles" class="panel">
 								<header>
 									<h2>Articles</h2>
@@ -227,6 +323,7 @@
 								<section>
 									<div class="row">
 											<ul style="list-style: none; margin-left: 5%; padding-left: 0;">
+												<li style="margin-bottom: 20px;"><a href="hhttps://amplication.com/blog/creating-a-chatroom-in-angular-using-amplication" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating a Chatroom in Angular using Amplication</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Flutter x Amplication: Building a To-Do App</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating Data Models for NodeJS Apps with Amplication's React Admin UI</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://learnxinyminutes.com/docs/docker/" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Learn Docker in Minutes</a></li>
@@ -260,7 +357,6 @@
 							</article>
 
 
-
 								<!-- Calendly badge widget begin -->
 								<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 								<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -284,11 +380,13 @@
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
+
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+
 
 	</body>
 </html>
