--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 								<section>
 									<div class="row">
 											<ul style="list-style: none; margin-left: 5%; padding-left: 0;">
-												<li style="margin-bottom: 20px;"><a href="hhttps://amplication.com/blog/creating-a-chatroom-in-angular-using-amplication" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating a Chatroom in Angular using Amplication</a></li>
+												<li style="margin-bottom: 20px;"><a href="https://amplication.com/blog/creating-a-chatroom-in-angular-using-amplication" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating a Chatroom in Angular using Amplication</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Flutter x Amplication: Building a To-Do App</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating Data Models for NodeJS Apps with Amplication's React Admin UI</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://learnxinyminutes.com/docs/docker/" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Learn Docker in Minutes</a></li>
