--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											text-decoration: none;
 										}
 									</style>
-									<a href="https://drive.google.com/file/u/5/d/1-97FyaQiIeJyXa5wHJX1pPzXqgyNBgmb/view?usp=sharing"><button class="btn">View Resume</button></a>
+									<a href="https://drive.google.com/file/d/1dLaH1XHRmXBXHEUmig9KVpP1mKgyF0tL/view?usp=drive_link"><button class="btn">View Resume</button></a>
 									<br>
 
 									<a href="https://www.buymeacoffee.com/plastic96">
