--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										</style>
 
 										<ul>
-											<li><b>Backend Engineering Intern <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-present]</span></li>
+											<li><b>Backend Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-present]</span></li>
 											<li><b>Hackathon Coach <a href="https://mlh.io/">@MLH</a></b> <span>[2023-present]</span></li>
 											<li><b>Technical Program Associate <a href="https://mlh.io/">@MLH Fellowship</a></b> <span>[2022-present]</span></li>
 											<li><b>Fellow <a href="https://fellowship.mlh.io/">@MLH Fellowship</a></b> <span>[2021]</span></li>
