--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<div style="margin: 1.5%; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
 								<p>
 									Tbh it is super weird to talk about yourself, but below is a mere try.<br/>
-									I'm a final year CS undergraduate (2019-2023) at IIIT Kalyani.
+									I'm a Software Developer and a CS graduate (2019-2023) from IIIT Kalyani.
 
 									Here are a few things I am/have been involved with:
 
@@ -112,7 +112,8 @@
 										</style>
 
 										<ul>
-											<li><b>Backend Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-present]</span></li>
+											<li><b>Platform Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2024-present]</span></li>
+											<li><b>Backend Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-2024]</span></li>
 											<li><b>Hackathon Coach <a href="https://mlh.io/">@MLH</a></b> <span>[2023-present]</span></li>
 											<li><b>Technical Program Associate <a href="https://mlh.io/">@MLH Fellowship</a></b> <span>[2022-present]</span></li>
 											<li><b>Fellow <a href="https://fellowship.mlh.io/">@MLH Fellowship</a></b> <span>[2021]</span></li>
