--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											text-decoration: none;
 										}
 									</style>
-									<a href="https://drive.google.com/file/d/1sJLu8SfgG-snRawMMGY6iEAjraz8ijFq/view?usp=sharing"><button class="btn">View Resume</button></a>
+									<a href="https://drive.google.com/file/d/1HNjklmZFEEr8LUDkldt7qjiF49sACJly/view?usp=sharing"><button class="btn">View Resume</button></a>
 									<br>
 
 									<a href="https://www.buymeacoffee.com/plastic96">
@@ -142,11 +142,6 @@
 											<p>Most recent first, these aren't on my resume:</p>
 											<ul style="list-style-type: none; padding-left: 2%;">
 											  <li style="margin-bottom: 20px;">
-													<a href="https://github.com/akshitadixit/flockbot" style="color: #d772e4; font-weight: bold;">Flockbot for Oncalls</a>
-													<br>
-													<p style="margin-top: 5px;">Made for Techathon at 1mg. The bot listens to commands and pulls up data and contact of the on-call developers for that sprint to display on the flock channel.</p>
-											  </li>
-											  <li style="margin-bottom: 20px;">
 												<a href="https://github.com/akshitadixit/Scheduler" style="color: #d772e4; font-weight: bold;">Project Scheduler in Python</a>
 												<br>
 												<p style="margin-top: 5px;">Made for a semester project submission for the subject "Software Engineering". Takes in your input files with tasks' details and
@@ -207,6 +202,33 @@
 								<section>
 									<div class="container">
 									  <div class="row">
+										<div class="col-md-4 collage-item">
+										  <div class="popup" id="popup1">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup1')">&times;</span>
+											  <img src="./images/gittogether-ncr.jpeg" alt="GitHub Copilot" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/gittogether-ncr.jpeg" alt="GitHub Copilot" onclick="openPopup('popup1')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-4 collage-item">
+										  <div class="popup" id="popup1">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup1')">&times;</span>
+											  <img src="./images/apidays.jpeg" alt="API Lifecycle" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/apidays.jpeg" alt="API Lifecycle" onclick="openPopup('popup1')" style="cursor: pointer;">
+										</div>
+										<div class="col-md-3 collage-item">
+										  <div class="popup" id="popup1">
+											<div class="popup-content">
+											  <span class="popup-close" onclick="closePopup('popup1')">&times;</span>
+											  <img src="./images/fosscuk.jpeg" alt="Server Sent Events" class="popup-img">
+											</div>
+										  </div>
+										  <img src="./images/fosscuk.jpeg" alt="Server Sent Events" onclick="openPopup('popup1')" style="cursor: pointer;">
+										</div>
 										<div class="col-md-3 collage-item">
 										  <div class="popup" id="popup1">
 											<div class="popup-content">
@@ -324,6 +346,7 @@
 								<section>
 									<div class="row">
 											<ul style="list-style: none; margin-left: 5%; padding-left: 0;">
+												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/mimicking-mongodb-plugin-in-grafana-for-free-a-workaround-5da3639306af" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Mimicking MongoDB Plugin in Grafana for Free: A Workaround</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://amplication.com/blog/creating-a-chatroom-in-angular-using-amplication" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating a Chatroom in Angular using Amplication</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://plastic96.medium.com/creating-a-to-do-app-in-flutter-using-amplication-b29be96b13b8" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Flutter x Amplication: Building a To-Do App</a></li>
 												<li style="margin-bottom: 20px;"><a href="https://dev.to/akshitadixit/creating-data-models-for-nodejs-apps-with-amplications-react-admin-ui-oho" style="color: #a83fef; text-decoration: none; font-size: 20px; font-weight: bolder;">Creating Data Models for NodeJS Apps with Amplication's React Admin UI</a></li>
