add readme builder

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 										<ul>
 											<li><b>Platform Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2024-present]</span></li>
 											<li><b>Backend Engineering <a href="http://1mg.com/">@Tata 1mg</a></b> <span>[2023-2024]</span></li>
-											<li><b>Hackathon Coach <a href="https://mlh.io/">@MLH</a></b> <span>[2023-present]</span></li>
-											<li><b>Technical Program Associate <a href="https://mlh.io/">@MLH Fellowship</a></b> <span>[2022-present]</span></li>
+											<li><b>Hackathon Coach <a href="https://mlh.io/">@MLH</a></b> <span>[2023]</span></li>
+											<li><b>Technical Program Associate <a href="https://mlh.io/">@MLH Fellowship</a></b> <span>[2022-2023]</span></li>
 											<li><b>Fellow <a href="https://fellowship.mlh.io/">@MLH Fellowship</a></b> <span>[2021]</span></li>
 											<li><b>Lead <a href="https://gdsc.community.dev/indian-institute-of-information-technology-kalyani/">@GDSC</a></b> <span>[2021-22]</span></li>
 											<li><b>Backend Engineering Intern <a href="https://www.crediwatch.com/home/">@Crediwatch</a></b> <span>[2021]</span></li>
@@ -141,7 +141,12 @@
 									<div class="row">
 											<p>Most recent first, these aren't on my resume:</p>
 											<ul style="list-style-type: none; padding-left: 2%;">
-											  <li style="margin-bottom: 20px;">
+												<li style="margin-bottom: 20px;">
+													<a href="https://pypi.org/project/readme-builder/" style="color: #d772e4; font-weight: bold;">Automatic README builder</a>
+													<br>
+													<p style="margin-top: 5px;">I was annoyed of having to write README files for my projects. So I went ahead and created a CLI tool to auto-generate a README file for any project regardless of programming language! 📜 ✨ </p>
+												</li>
+												<li style="margin-bottom: 20px;">
 												<a href="https://github.com/akshitadixit/Scheduler" style="color: #d772e4; font-weight: bold;">Project Scheduler in Python</a>
 												<br>
 												<p style="margin-top: 5px;">Made for a semester project submission for the subject "Software Engineering". Takes in your input files with tasks' details and
