--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
 											<p>Most recent first, these aren't on my resume:</p>
 											<ul style="list-style-type: none; padding-left: 2%;">
 												<li style="margin-bottom: 20px;">
+													<a href="https://github.com/akshitadixit/flowfsm" style="color: #d772e4; font-weight: bold;">Flow FSM</a>
+													<br>
+													<p style="margin-top: 5px;">A versatile Python framework for building and managing finite state machines and workflows, (in future maybe) graph-based systems with ease and flexibility. </p>
+												</li>
+												<li style="margin-bottom: 20px;">
 													<a href="https://pypi.org/project/readme-builder/" style="color: #d772e4; font-weight: bold;">Automatic README builder</a>
 													<br>
 													<p style="margin-top: 5px;">I was annoyed of having to write README files for my projects. So I went ahead and created a CLI tool to auto-generate a README file for any project regardless of programming language! 📜 ✨ </p>
